Mar 4th, 2007: Alex Burger <alex_b@users.sourceforge.net>
- Fixed bug where snmptt tried to log to syslog when 
  changing UIDs even if syslog_system_enable was set to 0.
- The snmptt.pid file is now deleted when SNMPTT exits gracefully.
- When running in daemon mode with a daemon_uid user defined,
  a child snmptt process will be started as the daemon_uid user.
  The first process will continue to run as the user that ran
  snmptt (usually root), waiting for the child to quit.  After the
  child quits, the parent process will remove the snmptt.pid file 
  and exit.  The snmptt.pid file will contain the pid of the parent
  process.  Sending a TERM signal to either process will cause
  SNMPTT to terminate gracefully.
- Now aborts startup if an existing snmptt.pid file is found.
- Verifies that it is able to write to the pid_file folder before
  starting up.  If it can not, it aborts.  Only does this if
  pid_file has been defined.  Otherwise it attempts to create the
  pid file and if it fails, it just continues as in previous versions.

Mar 3rd, 2007: Alex Burger <alex_b@users.sourceforge.net>
- Added a text system log in addition to the existing syslog
  and Event Log logs.  Added log_system and log_system_file
  snmptt.ini options.
- Added snmptt.ini option pid_file to allow for custom
  pid file locations when running in daemon mode.
- Fixed bug where pid file did not contain the current
  pid of snmptt.

Feb 10th, 2007: Alex Burger <alex_b@users.sourceforge.net>
- Added information to Nagios section of documentation for
  using freshness checks to automatically clear trap alerts.
- Added information to Nagios section of documentation for
  using SNMP traps as heartbeats by using freshness checks.
  Thanks to Martin Fuerstenau.  See bug 1629565.
  
Jan 27th, 2007: Alex Burger <alex_b@users.sourceforge.net>
- Fixed bug in threads support.  EXEC'd commands were all passed
  the same $command variable.  Threads are now detached after
  being created.